
    import colander
    import deform.widget

    class MySchema(Schema):
        description = colander.SchemaNode(
                          colander.String(),
                          widget=deform.widget.RichTextWidget()
                          )

  For more information, see "Changing the Default Widget Associated
  With a Field" in the documentation.

Requirements
~~~~~~~~~~~~

- This Deform version requires ``colander`` version 0.7.2 or better.

Bug Fixes
~~~~~~~~~

- ``RichTextWidget``, ``AutocompleteInputWidget``, ``TextInputWidget``
  with input masks, and ``CheckedInputWidget`` with input masks could
  not be used properly within sequences.  Now they can be.  See also
  ``Internal`` and ``Backwards Incompatibilities`` within this
  release's notes.  This necessitated new required ``deform.load()``
  and ``deform.addCallback()`` JavaScript APIs.

- Radio choice widgets included within a submapping no longer put
  their selections on separate lines.

- Rich text widgets are now 500 pixels wide by default instead of 640.

Backwards Incompatibilities
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- The JavaScript function ``deform.load()`` now *must* be called by
  the HTML page (usually in a script tag near the end of the page, ala
  ``<script..>deform.load()</script>``) which renders a Deform form in
  order for widgets which use JavaScript to do proper event and
  behavior binding.  If this function is not called, built-in widgets
  which use JavaScript will no longer function properly.

- The JavaScript function ``deformFocusFirstInput`` was removed.  This
  is now implied by ``deform.load()``.

Internal
~~~~~~~~

- The various deform* JavaScript functions in ``deform.js`` have now
  been moved into a top-level namespace.  For example, where it was
  necessary to call ``deformFocusFirstInput()`` before, it is now
  necessary to call ``deform.focusFirstInput()``.

- Make the TinyMCE rich text widget use ``mode: 'exact'`` instead of
  ``mode: 'textareas'``.
