@@ -1,11 +1,11 @@
 <form
   id="${field.formid}"
   action="${field.action}"
-  class="wufoo"
   method="${field.method}"
   enctype="multipart/form-data"
   accept-charset="utf-8"
-  i18n:domain="deform">
+  i18n:domain="deform"
+  tal:attributes="class field.css_class">
 
   <fieldset class="deformFormFieldset">
 
